--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.10",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.27.13",
     "redux": "^4.0.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
