--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://ishitwaagrawal.github.io/WeatherApp/",
   "name": "weather_app",
   "version": "0.1.0",
   "private": true,
