--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -10,10 +10,13 @@
   "dependencies": {
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "postcss": "^8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
